--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,6 @@ body {
 body {
 	margin: 0;
 	font-family: Roboto, 'Helvetica Neue', sans-serif;
-
-	--navbar-height: 60px;
 }
 
 *,
